test/modules/lydia/test-modSameNameBadRequire2.good
modSameNameAsFileBadRequire2.chpl:1: warning: an implicit module named 'modSameNameAsFileBadRequire2' is being introduced to contain file-scope code
modSameNameAsFileBadRequire2.chpl:3: warning: module 'modSameNameAsFileBadRequire2' has the same name as the implicit file module
modSameNameAsFileBadRequire2.chpl:3: note: did you mean to include all statements in the module declaration?
test-modSameNameBadRequire2.chpl:3: error: 'inner' undeclared (first use this function)
